views are changable, and auth works with all.

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -10,9 +10,13 @@
         <script type="text/javascript" src="scripts/controllers/info.controller.js"></script>
         <script type="text/javascript" src="scripts/controllers/login.controller.js"></script>
         <script type="text/javascript" src="scripts/controllers/user.controller.js"></script>
+        <script type="text/javascript" src="scripts/controllers/schedule.controller.js"></script>
         <script type="text/javascript" src="scripts/controllers/soldier.controller.js"></script>
+        <script type="text/javascript" src="scripts/controllers/vehicle.controller.js"></script>
         <script type="text/javascript" src="scripts/services/user.service.js"></script>
+        <script type="text/javascript" src="scripts/services/schedule.service.js"></script>
         <script type="text/javascript" src="scripts/services/soldier.service.js"></script>
+        <script type="text/javascript" src="scripts/services/vehicle.service.js"></script>
     </head>
 
     <body ng-app="myApp">
