--- a/server/public/index.html
+++ b/server/public/index.html
@@ -7,6 +7,7 @@
         <script type="text/javascript" src="vendors/angular-route/angular-route.js"></script>
         <script type="text/javascript" src="vendors/jquery-3.3.1.min.js"></script>
         <link rel="stylesheet" href="vendors/bootstrap/dist/css/bootstrap.css"/>
+        <script src="vendors/sweetalert/dist/sweetalert.min.js"></script>
         <script type="text/javascript" src="scripts/client.js"></script>
         <script type="text/javascript" src="scripts/controllers/info.controller.js"></script>
         <script type="text/javascript" src="scripts/controllers/login.controller.js"></script>
